--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
         <h1>Discover the Wild</h1>
     </section>
     <div style="background-color: aqua; padding: 20px;">
-        <script src="https://simply36090729-dev.s3.us-east-1.amazonaws.com/public/data-wizard-embed/my-test-component.umd.cjs"></script>
+        <script src="https://xr24xxsvd9.execute-api.us-east-1.amazonaws.com/dev/publicWizard/files/datawizard.js"></script>
         <data-wizard-component
-        data-wizard-id="GGGG-GGGG-GGGG"
-        data-wizard-step-id="GGGG-GGGG-1GGG"
+        data-wizard-id="FFFF-FFFF-FFFF"
+        data-wizard-step-id="FFFF-FFFF-1FFF"
         team-id="QO49-KPXN-GYPW"
         is-web-component="true"
       ></data-wizard-component>
