--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
     <div style="background-color: aqua; padding: 20px;">
         <script src="https://xr24xxsvd9.execute-api.us-east-1.amazonaws.com/dev/data-wizard-embed/files/dataWizard.js"></script>
         <data-wizard-component
-        data-wizard-id="GGGG-GGGG-GGGG"
-        data-wizard-step-id="GGGG-GGGG-1GGG"
+        data-wizard-id="FFFF-FFFF-FFFF"
+        data-wizard-step-id="FFFF-FFFF-1FFF"
         team-id="QO49-KPXN-GYPW"
         is-web-component="true"
       ></data-wizard-component>
