--- a/index.html
+++ b/index.html
@@ -136,14 +136,14 @@
     <section class="hero">
         <h1>Discover the Wild</h1>
     </section>
-    <div style="background-color: aqua; padding: 20px;">
-        <script src="https://xr24xxsvd9.execute-api.us-east-1.amazonaws.com/dev/data-wizard-embed/files/dataWizard.js"></script>
-        <data-wizard-component
-        data-wizard-id="FFFF-FFFF-FFFF"
-        data-wizard-step-id="FFFF-FFFF-1FFF"
-        team-id="QO49-KPXN-GYPW"
-        is-web-component="true"
-      ></data-wizard-component>
+    <div>
+    <script src="https://dev-public.simply360.com/v1/s360.js"></script>
+
+    <div id="s360-embed-6K10-YX3P-P9J3" class="s360-embed"><div id="map"></div></div>
+    <script>
+      injectMapDataView('6K10-YX3P-P9J3','',1000,'ZXjqrcLcUeqWQJ2uyZfkRzBNApFhIhHd',[]
+      )
+    </script>
     </div>
     <div class="container">
         <section class="intro">
