--- a/index.html
+++ b/index.html
@@ -137,13 +137,13 @@
         <h1>Discover the Wild</h1>
     </section>
     <div>
-    <script src="https://dev-public.simply360.com/v1/s360.js"></script>
-
-    <div id="s360-embed-6K10-YX3P-P9J3" class="s360-embed"><div id="map"></div></div>
-    <script>
-      injectMapDataView('6K10-YX3P-P9J3','',1000,'ZXjqrcLcUeqWQJ2uyZfkRzBNApFhIhHd',[]
-      )
-    </script>
+     <script src="https://xr24xxsvd9.execute-api.us-east-1.amazonaws.com/dev/data-wizard-embed/files/dataWizard.js"></script>
+         <data-wizard-component
+         data-wizard-id="CAMP-AAAA-AAAA"
+         data-wizard-step-id="CAMP-1AAA-TASK"
+         team-id="4P5G-RR2R-GLZE"
+         is-web-component="true"
+       ></data-wizard-component>
     </div>
     <div class="container">
         <section class="intro">
