--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <h1>Discover the Wild</h1>
     </section>
     <div>
-     <script src="https://xr24xxsvd9.execute-api.us-east-1.amazonaws.com/dev/data-wizard-embed/files/dataWizard.js"></script>
+     <script src="https://04gpb223w8.execute-api.us-east-1.amazonaws.com/dev/data-wizard-embed/files/dataWizard.js"></script>
          <data-wizard-component
          data-wizard-id="CAMP-AAAA-AAAA"
          data-wizard-step-id="CAMP-1AAA-TASK"
