--- a/index.html
+++ b/index.html
@@ -137,11 +137,11 @@
         <h1>Discover the Wild</h1>
     </section>
     <div>
-        <script src="https://04gpb223w8.execute-api.us-east-1.amazonaws.com/dev/data-wizard-embed/files/dataWizard.js"></script>
+        <script src="https://5vox6nbkdg.execute-api.us-east-1.amazonaws.com/prod/data-wizard-embed/files/dataWizard.js"></script>
         <data-wizard-component
-        data-wizard-id="CAMP-AAAA-AAAA"
-        data-wizard-step-id="CAMP-AAAA-1AAA"
-        team-id="4P5G-RR2R-GLZE"
+        data-wizard-id="O1QX-GXJM-9ZM3"
+        data-wizard-step-id="85DN-G6W6-GXEJ"
+        team-id="V4P5-GRXX-GLZE"
         is-web-component="true"
       ></data-wizard-component>
     </div>
