--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <h1>Discover the Wild</h1>
     </section>
     <div>
-        <script src="https://5vox6nbkdg.execute-api.us-east-1.amazonaws.com/prod/data-wizard-embed/files/dataWizard.js"></script>
+        <script src="https://yqlav6r4kf.execute-api.us-east-1.amazonaws.com/devtemp/data-wizard-embed/files/dataWizard.js"></script>
         <data-wizard-component
         data-wizard-id="O1QX-GXJM-9ZM3"
         data-wizard-step-id="85DN-G6W6-GXEJ"
