--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         team-id="V4P5-GRXX-GLZE"
         is-web-component="true"
       ></data-wizard-component>-->
-     <script src="https://dev-public.simply360.com/v1/s360.js"></script>
+     <script src="https://dev.public.simply360.app/v1/s360.js"></script>
     <div id="s360-embed-6K10-YX3P-P9J3" class="s360-embed"><div id="map"></div></div>
     <script>
       injectMapDataView('6K10-YX3P-P9J3','',1000,'ZXjqrcLcUeqWQJ2uyZfkRzBNApFhIhHd',[]
