--- a/index.html
+++ b/index.html
@@ -137,24 +137,24 @@
         <h1>Discover the Wild</h1>
     </section>
 <div>
-      <!--  <script src="https://main.d3tlv0ih6ly3fv.amplifyapp.com/data-wizard-component.umd.cjs"></script>
+      <script src="https://main.d3tlv0ih6ly3fv.amplifyapp.com/data-wizard-component.umd.cjs"></script>
         <data-wizard-component
         data-wizard-id="O1QX-GXJM-9ZM3"
         data-wizard-step-id="85DN-G6W6-GXEJ"
         team-id="V4P5-GRXX-GLZE"
         is-web-component="true"
       ></data-wizard-component>
-         <script src="https://dev.public.simply360.app/v1/s360.js"></script>
+    <!--       <script src="https://dev.public.simply360.app/v1/s360.js"></script>
     <div id="s360-embed-6K10-YX3P-P9J3" class="s360-embed"><div id="map"></div></div>
     <script>
       injectMapDataView('6K10-YX3P-P9J3','',1000,'ZXjqrcLcUeqWQJ2uyZfkRzBNApFhIhHd',[]
       )
-    </script>-->
+    </script>
      <script src="https://dev.public.simply360.app/v1/s360.js"></script>
     <div id="s360-embed-KWN0-LMJ6-YG8X" class="s360-embed"></div>
     <script>
       injectListDataView('KWN0-LMJ6-YG8X','',10,'ZXjqrcLcUeqWQJ2uyZfkRzBNApFhIhHx',[])
-    </script>
+    </script>-->
     </div>
     <div class="container">
         <section class="intro">
