--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
     </script>-->
       <script src="https://dev.wizard.simply360.app/data-wizard-component.umd.cjs"></script>
      <data-wizard-component
-      data-wizard-id="CREA-TECA-MPGG"
-      data-wizard-step-id="CREA-TECA-MPS1"
+      data-wizard-id="CAMP-AAAA-AAAA"
+      data-wizard-step-id="CAMP-AAAA-1AAA"
       team-id="4P5G-RR2R-GLZE"
       is-web-component="true"
     ></data-wizard-component>
