--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
     </script>-->
       <script src="https://dev.wizard.simply360.app/data-wizard-component.umd.cjs"></script>
      <data-wizard-component
-      data-wizard-id="CAMP-AAAA-AAAA"
-      data-wizard-step-id="CAMP-AAAA-1AAA"
+      data-wizard-id="J4YG-3Z46-EGVO"
+      data-wizard-step-id="Q3W9-Q7Z2-M01Z"
       team-id="4P5G-RR2R-GLZE"
       is-web-component="true"
     ></data-wizard-component>
