--- a/index.html
+++ b/index.html
@@ -155,11 +155,11 @@
     <script>
       injectListDataView('KWN0-LMJ6-YG8X','',10,'ZXjqrcLcUeqWQJ2uyZfkRzBNApFhIhHx',[])
     </script>-->
-<script src="https://wizard.simply360.app/data-wizard-component.umd.cjs"></script>
+<script src="https://dev.wizard.simply360.app/data-wizard-component.umd.cjs"></script>
 <data-wizard-component
-  data-wizard-id="PRD0-PO5J-9VW6"
-  data-wizard-step-id="QO49-K6R4-9YPW"
-  team-id="V4P5-GRXX-GLZE"
+  data-wizard-id="J4YG-3Z46-EGVO"
+  data-wizard-step-id="Q3W9-Q7Z2-M01Z"
+  team-id="4P5G-RR2R-GLZE"
   is-web-component="true"
 ></data-wizard-component>
     </div>
