--- a/index.html
+++ b/index.html
@@ -154,14 +154,27 @@
     <div id="s360-embed-KWN0-LMJ6-YG8X" class="s360-embed"></div>
     <script>
       injectListDataView('KWN0-LMJ6-YG8X','',10,'ZXjqrcLcUeqWQJ2uyZfkRzBNApFhIhHx',[])
-    </script>-->
+    </script>
 <script src="https://dev.wizard.simply360.app/data-wizard-component.umd.cjs"></script>
 <data-wizard-component
   data-wizard-id="J4YG-3Z46-EGVO"
   data-wizard-step-id="Q3W9-Q7Z2-M01Z"
   team-id="4P5G-RR2R-GLZE"
   is-web-component="true"
-></data-wizard-component>
+></data-wizard-component>-->
+     <script src="https://dev.public.simply360.app/v1/s360.js"></script>
+
+    <div id="s360-embed-6K10-YX3P-P9J3" class="s360-embed"><div id="map"></div></div>
+    
+
+    <script>
+      injectMapDataView('6K10-YX3P-P9J3','',2000,'ZXjqrcLcUeqWQJ2uyZfkRzBNApFhIhHd',[
+        {
+         
+        }
+        ]
+      )
+    </script>
     </div>
     <div class="container">
         <section class="intro">
